package com.course.loadmonitorstudents;

import javafx.application.Application;

public class Launcher {
    public static void main(String[] args) {
        Application.launch(LoadMonitor.class, args);
    }
}
