package com.course.loadmonitorstudents.model;

public enum Role {
    CURATOR,
    STUDENT,
}
