package com.course.loadmonitorstudents.model;

public enum StatusTask {
    TO_DO,
    IN_PROGRESS,
    DONE,
    OVERDUE,
}
